# tcpserver

./: README.md
component/buffer/: Buffer.h
epoll/: epoll  epoll.cpp
herd/: heard_avoid.cpp  herd.c  herd_epoll.c  readme
http/: HttpHeader.h  HttpMessage.cpp  HttpMessage.h  readme
multireactor/multiprocess/: Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  Connection.cpp  Connection.h  EPoll.cpp  EPoll.h  Epoll.cpp  Epoll.h  EventDispatcher.cpp  EventDispatcher.h  FixedBuffer.cpp  Poller.h  Server.cpp  Server.h  Types.h  main.cpp  multireactor  sem.cpp  sem.h  shmtx.cpp  shmtx.h
multireactor/multithread/: Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  EventDispatcher.cpp  FixedBuffer.cpp  Poller.cpp  Server.cpp  Server.h  Types.h  main.cpp
net/: Channel.cpp  Connection.cpp  Connection.h  EPoll.cpp  EventDispatcher.h  Poller.h
readctor/: reactor  reactor.cpp
select/: select  select.cpp
